# SHARK-Studio

./: .dmg_config.py.swp  .flake8  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  Dockerfile  README.md  conftest.py  create_pyinstaller_bundle.bat  generate_sharktank.py  install.sh  package-index-torch-mlir.html  process_skipfiles.py  pyproject.toml  pytest.ini  repo_init.py  requirements-importer-macos.txt  requirements-importer.txt  requirements-tgbot.txt  requirements.txt  setup.py  setup_venv.ps1  setup_venv.sh  shark_patch_dict_lora_te_.json  shark_patch_dict_lora_unet_.json  tank_version.json  tufup_repo_upload.py  webui_requirements.txt
.github/workflows/: gh-pages-releases.yml  nightly.yml  python-format.yml  python-package.yml  test-models.yml  test-studio.yml
apps/: README.md
apps/language_models/: README.md  shark_llama_cli.spec  utils.py
apps/shark_studio/: shark_studio.spec  shark_studio_apionly.spec  shark_studio_debug.spec  studio_imports.py  studio_imports_apionly.py
apps/stable_diffusion/: profiling_with_iree.md  shark_sd.spec  shark_sd_cli.spec  shark_studio_imports.py  stable_diffusion_amd.md  stable_diffusion_telegram_bot.md  studio_bundle.spec
benchmarks/: hf_minilm_benchmark.py  hf_model_benchmark.py  hf_transformer.py  requirements.txt
benchmarks/tests/: test_benchmark.py  test_hf_benchmark.py
build_tools/: bundled_app_to_zip.py  image_comparison.py  populate_sharktank_ci.sh  scrape_releases.py  shark_versions.txt  stable_diff_main_test.sh  stable_diffusion_testing.py  vicuna_testing.py
build_tools/docker/: Dockerfile-ubuntu-22.04  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  save_img.py
cpp/vision_inference/: CMakeLists.txt  README.md  image_util.c  image_util.h  iree-run-mnist-module.c
cpp/vulkan_gui/: CMakeLists.txt  vulkan_inference_gui.cc
dSHARK/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dshark_driver_module.c  dshark_driver_module.h  minimal-http-server-form-post-file.c  run-module.c  simple_embedding_test.mlir  simple_embedding_test_bytecode_module.c  simple_embedding_test_bytecode_module.h  simple_embedding_test_bytecode_module.vmfb  simple_embedding_test_bytecode_module_cuda_c.c  simple_embedding_test_bytecode_module_cuda_c.h  simple_embedding_test_bytecode_module_cuda_c.vmfb
dSHARK/dshark_client/: CMakeLists.txt  dshark_client.cpp
dSHARK/dshark_network_lib/: CMakeLists.txt  dshark_client.h  dshark_common.h  dshark_connection.h  dshark_message.h  dshark_queue.h  dshark_server.h
dSHARK/dshark_run_module/: CMakeLists.txt  dshark_driver_module.c  run_module.c  run_module.h
dSHARK/dshark_server/: CMakeLists.txt  dshark_server.cpp
dSHARK/mount-origin/: index.html
dataset/: README.md  annotation_tool.py  args.py  requirements.txt  utils.py
docs/: shark_iree_profiling.md  shark_sd_blender.md  shark_sd_koboldcpp.md
inference/: CMakeLists.txt  README.md
inference/cmake/: SharkBackendConfig.cmake.in
inference/src/: dshark.cc
package-index/: index.html
reference_models/bert-base-uncased_torch/: bert-base-uncased_torch_test.py
reference_models/distilbert-base-uncased_tf/: distilbert-base-uncased_tf_test.py
reference_models/distilbert-base-uncased_torch/: distilbert-base-uncased_torch_test.py
reference_models/mobilenet_v3_small_torch/: mobilenet_v3_small_torch_test.py
reference_models/resnet101_torch/: resnet101_torch_test.py
reference_models/resnet50_torch/: resnet50_torch_test.py
reference_models/unet_torch/: unet_torch_test.py
rest_api_tests/: api_test.py  sd3api_test.py
shark/: README.md  __init__.py  backward_makefx.py  cuda_utils.py  functorch_utils.py  iree_eager_backend.py  iree_utils.py  iree_utils_tf.py  model_annotation.py  parser.py  shark_benchmark_runner.py  shark_compile.py  shark_downloader.py  shark_generate_model_config.py  shark_importer.py  shark_inference.py  shark_runner.py  shark_runner_tf.py  shark_trainer.py  stress_test.py  tflite_utils.py  torch_mlir_lockstep_tensor.py  torch_mlir_utils.py
shark/dynamo_backend/: utils.py
shark/examples/: bert_aot.py  bert_training.py  bert_training_tf.py  fully_makefx.py  fullyconnected.py  fullyconnected_aot.py  fullyconnected_script.py  hugging_face_lm_jit.py  mhlo_example.py  minilm_benchmark.py  minilm_jit.py  minilm_tf.py  neural_net_training.py  resnet50_script.py  test_cpu.py  test_models.py  torch_vision_models_script.py  unet_script.py
shark/iree_utils/: _common.py  benchmark_utils.py  compile_utils.py  cpu_utils.py  gpu_utils.py  metal_utils.py  trace.py  vulkan_target_env_utils.py  vulkan_utils.py
shark/sharding_utils/: split_mlir_file.py
shark/shark_eager/: shark_eager.py
shark/sharkdynamo/: README.md  shark_backend.py  utils.py
shark/tests/: test_benchmark.py  test_hf_benchmark.py  test_index.py  test_models.py  test_shark_importer.py  test_stress_test.py  test_txt2img_ui.py
shark_runner/: README.md  fullyconnected.py  functorch_utils.py  iree_utils.py  resnet50.py  set_dep_pypaths.sh  shark_runner.py  torch_mlir_utils.py
shark_runner/examples/: bert_aot.py  fullyconnected_aot.py  generate_bert_graphs_and_inputs.py  hugging_face_lm_jit.py  minilm_jit.py  resnet50_script.py  run_mlir_on_iree.py  torch_vision_models_script.py  unet_script.py
shark_web/: index.py
shark_web/models/: albert_maskfill.py  resnet50.py
tank/: README.md  all_models.csv  bloom_model.py  conftest.py  generate_sharktank.py  gpu_suite.sh  masked_lm_tf.py  model_metadata.csv  model_utils.py  model_utils_tf.py  model_utils_tflite.py  pretrain_models.csv  test_models.py  test_models_dynamo.py  test_utils.py  tf_model_list.csv  torch_model_list.csv  torch_sd_list.csv
tank/MiniLM-L12-H384-uncased/: MiniLM-L12-H384-uncased_test.py
tank/MiniLM-L12-H384-uncased_torch/: MiniLM-L12-H384-uncased_torch_test.py
tank/albert-base-v2/: albert-base-v2_test.py
tank/alexnet/: alexnet_test.py
web/: README.md  bot.py  demo.css  img2img.py  index.py  index.spec  prompts.json  repo_settings.py  settings.py  shark_sd.spec  telegram_bot.py
windows_installer/: build_installer.ps1  shark_updater.aip
(+891 files in other folders)
