[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "packaging",

    "numpy>=1.22.4",
    "torch-mlir>=20230620.875",
    "iree-compiler>=20221022.190",
    "iree-runtime>=20221022.190",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = "apps/language_models/scripts/vicuna.py"
extend-exclude = "apps/language_models/src/pipelines/minigpt4_pipeline.py"
extend-exclude = "shark.venv"
