[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "packaging",

    "numpy>=1.22.4",
    "iree-compiler>=20221022.190",
    "iree-runtime>=20221022.190",
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
    | apps/stable_diffusion
    | apps/language_models
    | shark
    | benchmarks
    | tank
    | build
    | generated_imgs
    | shark.venv
  )/
  | setup.py
)
'''
